osdc/Objecter: fix OSDMap leak in handle_osd_map

If there are threads accessing osdmap unlocked they may walk into freed
memory, but that means the caller is buggy: we are holding the rwlock.

Fixes: http://tracker.ceph.com/issues/20491
Signed-off-by: Sage Weil <sage@redhat.com>